# rocket-api

./: Cargo.toml  README.md  Rocket.toml
migrations/2022-05-11-151843_users/: up.sql
migrations/2022-05-11-151901_appointments/: up.sql
migrations/2022-05-11-151918_feedback/: down.sql  up.sql
src/: main.rs  schema.rs  util.rs
src/models/: appointment.rs  feedback.rs  mod.rs  user.rs
