[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["uuid"] }
diesel = { version="2.0.0-rc.0", features=["postgres", "r2d2", "uuid", "chrono", "serde_json"]}
rocket_sync_db_pools = { version="0.1.0-rc.2", default-features = false, features = ["diesel_postgres_pool"] }
uuid = { version="1.0.0", features = ["serde", "v1", "v4"] }
chrono = "0.4.19"
serde = "1.0.137"
serde_json = "1.0.81"