[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["json", "secrets", "uuid"] }
diesel = { version="1.4.8", features=["postgres", "chrono", "uuidv07"]}
rocket_sync_db_pools = { version="0.1.0-rc.2", default-features=false, features=["diesel_postgres_pool"]}
uuid = { version="0.8", features=["serde", "v4"] }
chrono = { version="0.4", features=["serde"] }
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"